конец стилизации новостей и начало баннера нижнего

--- a/index.html
+++ b/index.html
@@ -390,7 +390,36 @@
                                             </div>
                                             <div class="new-desc__bottom">
                                                 <div class="new-desc__data">
-                                                    05.04.2019
+                                                   
+                                                    <div class="new-desc__data-text">
+                                                        05.04.2019
+                                                    </div>                                                    
+                                                </div>
+                                                <span class="new-desc__bottom-span">
+                                                    читать
+                                                </span> 
+                                            </div>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li class="new__item">
+                                    <a href="#" class="new__link">
+                                        <div class="new__wrapper-pic">
+                                            <img src="/assets/img/foto/news-pic.jpg" alt="nopic" class="new__pic">
+                                        </div>
+                                        <div class="new-desc__block">
+                                            <div class="new-desc__title">
+                                                МИД Кыргызской Республики в ДА МИД КР имени К.Дикамбаева проведен конкурс выразительного чтения
+                                            </div>
+                                            <div class="new-desc__text">
+                                                    В рамках празднования в 2018 году 90-летия со дня рождения великого кыргызского писателя Чынгыза Торокуловича Айтматова, Министерством иностранных дел Кыргызской Республики и загранучреждениями КР на территории Кыргызстана и в зарубежных
+                                            </div>
+                                            <div class="new-desc__bottom">
+                                                <div class="new-desc__data">
+                                                
+                                                    <div class="new-desc__data-text">
+                                                        07.04.2019
+                                                    </div>                                                    
                                                 </div>
                                                 <span class="new-desc__bottom-span">
                                                     читать
@@ -400,6 +429,11 @@
                                     </a>
                                 </li>
                             </ul>
+                        </div>
+                        <div class="slaider-bottom">
+                            <a href="#" class="slaider-bottom__link">
+                                <img src="/assets/img/banner/bottom-banner.jpg" alt="banner-bottom" class="slaider-bottom__pic">
+                            </a>
                         </div>
                     </main>
                 </div>
