баг с анимацией подравил

--- a/index.html
+++ b/index.html
@@ -139,14 +139,12 @@
                 <ul class="nav__list">
                     <li class="nav__item">
                         <a href="#" class="nav__link">
-                            <span class="nav__animate">
-                                Главная
-                            </span>
+                            <span class="nav__animate">Главная</span>
                         </a>
                     </li>
                     <li class="nav__item">
                         <a href="#" class="nav__link">
-                            <span class="nav__animate">Услуги </span>
+                            <span class="nav__animate">Услуги</span>
                         </a>
                     </li>
                     <li class="nav__item">
