--- a/index.html
+++ b/index.html
@@ -441,7 +441,9 @@
         <!-- конец фрапера -->
     </div>
     <footer class="footer">
-
+    <div class="container">
+        
+    </div>
     </footer>
 </body>
 
