--- a/index.html
+++ b/index.html
@@ -501,12 +501,47 @@
                     <ul class="footer-service__list">
                         <li class="footer-service__item">
                             <a href="#" class="footer-service__link">
-                                <span class="footer-service__text">Перевод докуметов</span>
+                                <div class="footer-service__text">Перевод докуметов</div>
+                            </a>
+                        </li>
+                        <li class="footer-service__item">
+                            <a href="#" class="footer-service__link">
+                                <div class="footer-service__text">Туризм</div>
+                            </a>
+                        </li>
+                        <li class="footer-service__item">
+                            <a href="#" class="footer-service__link">
+                                <div class="footer-service__text">Авиакасса</div>
                             </a>
                         </li>
                     </ul>
                 </div>
+                <div class="footer__middle-double">
+                        <div class="footer-title">
+                                Другие разделы
+                            </div>
+                            <ul class="footer-service__list">
+                                <li class="footer-service__item">
+                                    <a href="#" class="footer-service__link">
+                                        <div class="footer-service__text">Новости</div>
+                                    </a>
+                                </li>
+                                <li class="footer-service__item">
+                                    <a href="#" class="footer-service__link">
+                                        <div class="footer-service__text">О компании</div>
+                                    </a>
+                                </li>
+                                <li class="footer-service__item">
+                                    <a href="#" class="footer-service__link">
+                                        <div class="footer-service__text">Контакты</div>
+                                    </a>
+                                </li>
+                            </ul>
+                </div>
                 <div class="footer__right">
+                    <div class="footer-title">
+                            Контакты
+                    </div>
                 </div>
 
 
