--- a/index.html
+++ b/index.html
@@ -542,6 +542,23 @@
                     <div class="footer-title">
                             Контакты
                     </div>
+                    <ul class="footer-service__list">
+                            <li class="footer-service__item">
+                                <a href="#" class="footer-service__link">
+                                    <div class="footer-service__text">720000, ул. Тоголок Молдо, 10 А</div>
+                                </a>
+                            </li>
+                            <li class="footer-service__item">
+                                <a href="#" class="footer-service__link">
+                                    <div class="footer-service__text">996 (312) 66-55-44</div>
+                                </a>
+                            </li>
+                            <li class="footer-service__item">
+                                <a href="#" class="footer-service__link">
+                                    <div class="footer-service__text">kdskg@mail.ru</div>
+                                </a>
+                            </li>
+                        </ul>
                 </div>
 
 
