--- a/index.html
+++ b/index.html
@@ -565,6 +565,13 @@
             </div>
         </div>
         </div>
+        <div class="footer-bottom">
+            <div class="container">
+                <div class="footer-bottom__text">
+                    2019 Сайт разработан ГП КЫРГЫЗДИПСЕРВИС. Все права защишены
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 
