конец стилизации подвала

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <META NAME="AUTHOR" CONTENT="Ivan Shirayev">
     <link rel="stylesheet" href="/assets/css/main.css">
     <title>Кыргыздипсервис</title>
 </head>
@@ -545,17 +546,29 @@
                     <ul class="footer-service__list">
                             <li class="footer-service__item">
                                 <a href="#" class="footer-service__link">
-                                    <div class="footer-service__text">720000, ул. Тоголок Молдо, 10 А</div>
+                                    <svg class="footer-icons__marker" aria-hidden="true">
+                                        <use xlink:href="assets/img/sprite/sprite-icons.svg#map-marker-alt-solid">
+                                        </use>
+                                    </svg>
+                                    <span class="footer-service__text">720000, ул. Тоголок Молдо, 10 А</span>
                                 </a>
                             </li>
                             <li class="footer-service__item">
                                 <a href="#" class="footer-service__link">
-                                    <div class="footer-service__text">996 (312) 66-55-44</div>
+                                    <svg class="footer-icons__telephone" aria-hidden="true">
+                                            <use xlink:href="assets/img/sprite/sprite-icons.svg#phone-solid">
+                                            </use>
+                                        </svg>
+                                    <span class="footer-service__text">996 (312) 66-55-44</span>                                    
                                 </a>
                             </li>
                             <li class="footer-service__item">
                                 <a href="#" class="footer-service__link">
-                                    <div class="footer-service__text">kdskg@mail.ru</div>
+                                        <svg class="footer-icons__mail" aria-hidden="true">
+                                                <use xlink:href="assets/img/sprite/sprite-icons.svg#envelope-regular">
+                                                </use>
+                                            </svg>
+                                    <span class="footer-service__text">kdskg@mail.ru</span>
                                 </a>
                             </li>
                         </ul>
