--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <META NAME="AUTHOR" CONTENT="Ivan Shirayev">
+    <!-- <link rel="stylesheet" href="slick-1.8.1/slick/slick.css">
+    <link rel="stylesheet" href="slick-1.8.1/slick/slick-theme.css"> -->
+    
     <link rel="stylesheet" href="/assets/css/main.css">
     <title>Кыргыздипсервис</title>
 </head>
@@ -303,6 +306,12 @@
                                     Туры по кыргызстану
                                 </span>
                             </div>
+                            <div class="slaider__wrapper">
+                                <img src="/assets/img/foto/ik.jpg" alt="slaider" class="slaider__pic">
+                                <span class="slaider__title">
+                                    Туры по кыргызстану
+                                </span>
+                            </div>
                         </div>
                         <div class="catalog">
                             <div class="title-block">
@@ -585,7 +594,9 @@
         </div>
     </footer>
     <!-- Подключение скриптов -->
-    
+    <script src="assets/libs/jquery-3.3.1.min.js"></script>
+    <script src="assets/libs/slick/slick.min.js"></script>
+    <script src="assets/js/slaider.js"></script>
 </body>
 
 </html>
