--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                             <div class="slaider__wrapper">
                                 <img src="/assets/img/foto/ik.jpg" alt="slaider" class="slaider__pic">
                                 <span class="slaider__title">
-                                    Туры по кыргызстану
+                                    Дипломатический отдых
                                 </span>
                             </div>
                         </div>
@@ -452,10 +452,18 @@
                             </ul>
                         </div>
                         <div class="slaider-bottom">
-                            <a href="#" class="slaider-bottom__link">
-                                <img src="/assets/img/banner/bottom-banner.jpg" alt="banner-bottom"
-                                    class="slaider-bottom__pic">
-                            </a>
+                            <div class="slaider-bottom__block">
+                                <a href="#" class="slaider-bottom__link">
+                                    <img src="/assets/img/banner/bottom-banner.jpg" alt="banner-bottom"
+                                        class="slaider-bottom__pic">
+                                </a>
+                            </div>
+                            <div class="slaider-bottom__block">
+                                <a href="#" class="slaider-bottom__link">
+                                    <img src="/assets/img/banner/8-е.jpg" alt="banner-bottom"
+                                        class="slaider-bottom__pic">
+                                </a>
+                            </div>
                         </div>
                     </main>
                 </div>
