--- a/index.html
+++ b/index.html
@@ -65,6 +65,20 @@
                 </div>
             </div>
         </div>
+        <div class="mobile-menu">
+                <nav class="menu-nav">
+                        <header>Услуги КДС<span>×</span></header>
+                        <ol>
+                            <li class="menu-item"><a href="#0">Главная</a></li>
+                            <li class="menu-item"><a href="#0">Услуги</a></li>
+                            <li class="menu-item"><a href="#0">Новости</a></li>
+                            <li class="menu-item"><a href="#0">Объвление</a></li>
+                            <li class="menu-item"><a href="#0">О компании</a></li>
+                            <li class="menu-item"><a href="#0">Контакты</a></li>
+                        </ol>
+                        <footer><button aria-label="Toggle Menu">Toggle</button></footer>
+                    </nav> 
+        </div>
         <header class="header__bottom">
             <div class="container">
                 <div class="header__bottom-flex-container">
@@ -604,6 +618,7 @@
     <script src="assets/libs/jquery-3.3.1.min.js"></script>
     <script src="assets/libs/slick/slick.min.js"></script>
     <script src="assets/js/slaider.js"></script>
+    <script src="assets/js/menu-moble.js"></script>
 </body>
 
 </html>
