--- a/index.html
+++ b/index.html
@@ -14,8 +14,20 @@
 
 <body>
     <div class="wrapper">
-        <div class="top-line">
+        <div class="mobile_line">
             <div class="container">
+                <div class="nav__humberger">                            
+                        <button class="button__humberger">
+                            <span class="button__line"></span>
+                            <span class="button__line"></span>
+                            <span class="button__line"></span>                    
+                        </button>                            
+                    </div>
+            </div>
+        </div>
+        <div class="top-line">
+            <div class="container">                   
+                                 
                 <div class="top-line__top top-line__flex-container">
                     <div class="top-line__left">
                         <a href="#" class="top-line__left-link">
@@ -65,20 +77,7 @@
                 </div>
             </div>
         </div>
-        <div class="mobile-menu">
-                <nav class="menu-nav">
-                        <header>Услуги КДС<span>×</span></header>
-                        <ol>
-                            <li class="menu-item"><a href="#0">Главная</a></li>
-                            <li class="menu-item"><a href="#0">Услуги</a></li>
-                            <li class="menu-item"><a href="#0">Новости</a></li>
-                            <li class="menu-item"><a href="#0">Объвление</a></li>
-                            <li class="menu-item"><a href="#0">О компании</a></li>
-                            <li class="menu-item"><a href="#0">Контакты</a></li>
-                        </ol>
-                        <footer><button aria-label="Toggle Menu">Toggle</button></footer>
-                    </nav> 
-        </div>
+       
         <header class="header__bottom">
             <div class="container">
                 <div class="header__bottom-flex-container">
@@ -153,6 +152,7 @@
         </header>
         <nav class="nav">
             <div class="container">
+                <span class="close--nav"></span> 
                 <ul class="nav__list">
                     <li class="nav__item">
                         <a href="#" class="nav__link">
@@ -619,6 +619,7 @@
     <script src="assets/libs/slick/slick.min.js"></script>
     <script src="assets/js/slaider.js"></script>
     <script src="assets/js/menu-moble.js"></script>
+   
 </body>
 
 </html>
