добавление социальных кнопок

--- a/index.html
+++ b/index.html
@@ -21,8 +21,25 @@
                             <span class="button__line"></span>
                             <span class="button__line"></span>
                             <span class="button__line"></span>                    
-                        </button>                            
-                    </div>
+                        </button>
+                        <ul class="social">
+                                <li class="social__item social__item--margin">
+                                    <a href="#" class="social__link">
+                                        <svg class="social__link-fb social--color" aria-hidden="true">
+                                            <use xlink:href="assets/img/sprite/sprite-icons.svg#facebook-f-brands">
+                                            </use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social__item">
+                                    <a href="#" class="social__link">
+                                        <svg class="social__link-instagram social--color" aria-hidden="true">
+                                            <use xlink:href="assets/img/sprite/sprite-icons.svg#instagram-brands"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                        </ul>                            
+                </div>
             </div>
         </div>
         <div class="top-line">
