мобильное меню под мобилки

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
                             <span class="button__line"></span>
                             <span class="button__line"></span>                    
                         </button>
+                        <div class="nav__logo-text">                            
+                        КЫРГЫЗДИПСЕРВИС
+                        </div>
                         <ul class="social">
                                 <li class="social__item social__item--margin">
                                     <a href="#" class="social__link">
