--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
             <div class="footer__wrap">
                 <div class="footer__left">
                     <div class="logo-dipservice">
-                        <div class="logo-block">
+                        <div class="logo-block logo-block--mobile">
                             <div class="logo">
                                 <a href="#" class="logo__link">
                                     <img src="/assets/img/logo/logo.png" alt="logo" class="log__pic logo--footer">
@@ -528,7 +528,7 @@
                         </div>
                     </div>
                     <div class="logo-mid">
-                        <div class="logo-block">
+                        <div class="logo-block logo-block--mobile">
                             <div class="logo">
                                 <a href="#" class="logo__link">
                                     <img src="/assets/img/logo/logo_midkr.png" alt="logo" class="log__pic logo--mid">
