линк на стринцу услуга

--- a/index.html
+++ b/index.html
@@ -175,12 +175,12 @@
                 <span class="close--nav"></span> 
                 <ul class="nav__list">
                     <li class="nav__item">
-                        <a href="#" class="nav__link">
+                        <a href="index.html" class="nav__link">
                             <span class="nav__animate">Главная</span>
                         </a>
                     </li>
                     <li class="nav__item">
-                        <a href="#" class="nav__link">
+                        <a href="service.html" class="nav__link">
                             <span class="nav__animate">Услуги</span>
                         </a>
                     </li>
