--- a/service.html
+++ b/service.html
@@ -96,8 +96,7 @@
                     </div>
                 </div>
             </div>
-        </div>
-       
+        </div>       
         <header class="header__bottom">
             <div class="container">
                 <div class="header__bottom-flex-container">
@@ -330,21 +329,33 @@
                                 </li>
                             </ul>
                         </div>
-                    </aside>
+                    </aside>                  
                     <main class="main-content">
+                        <div class="breadcrumbs">
+                              <div class="breadcrumbs__block">
+                                 <ul class="breadcrumbs__list">
+                                       <li class="breadcrumbs__item">
+                                             <a href="index.html" class="breadcrumbs__link">Главная</a>
+                                          </li>
+                                          <li class="breadcrumbs__item">
+                                             <a href="service.html" class="breadcrumbs__link breadcrumbs__link--activ">Услуги</a>
+                                          </li>
+                                 </ul>                      
+                              </div>
+                        </div>
                         <div class="slaider">
-                            <div class="slaider__wrapper">
-                                <img src="/assets/img/foto/sl.jpg" alt="slaider" class="slaider__pic">
-                                <span class="slaider__title">
-                                    Туры по кыргызстану
-                                </span>
-                            </div>
-                            <div class="slaider__wrapper">
-                                <img src="/assets/img/foto/ik.jpg" alt="slaider" class="slaider__pic">
-                                <span class="slaider__title">
-                                    Дипломатический отдых
-                                </span>
-                            </div>
+                              <div class="slaider__wrapper">
+                                  <img src="/assets/img/foto/sl.jpg" alt="slaider" class="slaider__pic">
+                                  <span class="slaider__title">
+                                      Туры по кыргызстану
+                                  </span>
+                              </div>
+                              <div class="slaider__wrapper">
+                                  <img src="/assets/img/foto/ik.jpg" alt="slaider" class="slaider__pic">
+                                  <span class="slaider__title">
+                                      Дипломатический отдых
+                                  </span>
+                              </div>
                         </div>
                         <div class="catalog">
                             <div class="title-block">
