--- a/service.html
+++ b/service.html
@@ -419,6 +419,51 @@
                                             </a>
                                         </div>
                                     </li>
+                                    <li class="catalog__item">
+                                        <div class="catalog__desc">
+                                            <a href="#" class="catalog__link">
+                                                <img src="/assets/img/catalog/sport1.jpg"
+                                                    alt="catalog-pic" class="catalog__pic">
+                                                <span class="catalog__text">Здоровье,отдых и спорт</span>
+                                            </a>
+                                        </div>
+                                    </li>
+                                    <li class="catalog__item">
+                                        <div class="catalog__desc">
+                                            <a href="#" class="catalog__link">
+                                                <img src="/assets/img/catalog/meating1.jpg"
+                                                    alt="catalog-pic" class="catalog__pic">
+                                                <span class="catalog__text">Организация мероприятий</span>
+                                            </a>
+                                        </div>
+                                    </li>
+                                    <li class="catalog__item">
+                                        <div class="catalog__desc">
+                                            <a href="#" class="catalog__link">
+                                                <img src="/assets/img/catalog/urist1.jpg"
+                                                    alt="catalog-pic" class="catalog__pic">
+                                                <span class="catalog__text">Юридические услуги</span>
+                                            </a>
+                                        </div>
+                                    </li>
+                                    <li class="catalog__item">
+                                        <div class="catalog__desc">
+                                            <a href="#" class="catalog__link">
+                                                <img src="/assets/img/catalog/arenda_avto1.jpg"
+                                                    alt="catalog-pic" class="catalog__pic">
+                                                <span class="catalog__text">Аренда автомобилей</span>
+                                            </a>
+                                        </div>
+                                    </li>
+                                    <li class="catalog__item">
+                                        <div class="catalog__desc">
+                                            <a href="#" class="catalog__link">
+                                                <img src="/assets/img/catalog/hom3.jpg"
+                                                    alt="catalog-pic" class="catalog__pic">
+                                                <span class="catalog__text">Аренда недвижемости</span>
+                                            </a>
+                                        </div>
+                                    </li>
                                 </ul>
                             </div>
                         </div>
