--- a/service-item.html
+++ b/service-item.html
@@ -96,8 +96,7 @@
                     </div>
                 </div>
             </div>
-        </div>
-       
+        </div>       
         <header class="header__bottom">
             <div class="container">
                 <div class="header__bottom-flex-container">
@@ -330,175 +329,23 @@
                                 </li>
                             </ul>
                         </div>
-                    </aside>
+                    </aside>                  
                     <main class="main-content">
-                        <div class="slaider">
-                            <div class="slaider__wrapper">
-                                <img src="/assets/img/foto/sl.jpg" alt="slaider" class="slaider__pic">
-                                <span class="slaider__title">
-                                    Туры по кыргызстану
-                                </span>
-                            </div>
-                            <div class="slaider__wrapper">
-                                <img src="/assets/img/foto/ik.jpg" alt="slaider" class="slaider__pic">
-                                <span class="slaider__title">
-                                    Дипломатический отдых
-                                </span>
-                            </div>
-                        </div>
-                        <div class="catalog">
-                            <div class="title-block">
-                                <h1 class="title">
-                                    Каталог услуг
-                                </h1>
-                            </div>
-                            <div class="catalog-block">
-                                <ul class="catalog__list">
-                                    <li class="catalog__item">
-                                        <div class="catalog__desc">
-                                            <a href="service-item.html" class="catalog__link">
-                                                <img src="/assets/img/catalog/avto.jpg" alt="catalog-pic"
-                                                    class="catalog__pic">
-                                                <span class="catalog__text">Автотранспортные услуги</span>
-                                            </a>
-                                        </div>
-                                    </li>
-                                    <li class="catalog__item">
-                                        <div class="catalog__desc">
-                                            <a href="#" class="catalog__link">
-                                                <img src="/assets/img/catalog/home.jpg" alt="catalog-pic"
-                                                    class="catalog__pic">
-                                                <span class="catalog__text">Риэлтовские услуги</span>
-                                            </a>
-                                        </div>
-                                    </li>
-                                    <li class="catalog__item">
-                                        <div class="catalog__desc">
-                                            <a href="#" class="catalog__link">
-                                                <img src="/assets/img/catalog/air.jpg" alt="catalog-pic"
-                                                    class="catalog__pic">
-                                                <span class="catalog__text">Авиакасса</span>
-                                            </a>
-                                        </div>
-                                    </li>
-                                    <li class="catalog__item">
-                                        <div class="catalog__desc">
-                                            <a href="#" class="catalog__link">
-                                                <img src="/assets/img/catalog/passport.jpg" alt="catalog-pic"
-                                                    class="catalog__pic">
-                                                <span class="catalog__text">Консульские услуги</span>
-                                            </a>
-                                        </div>
-                                    </li>
-                                    <li class="catalog__item">
-                                        <div class="catalog__desc">
-                                            <a href="#" class="catalog__link">
-                                                <img src="/assets/img/catalog/turizm.jpg" alt="catalog-pic"
-                                                    class="catalog__pic">
-                                                <span class="catalog__text">Туры по Кыргызстану</span>
-                                            </a>
-                                        </div>
-                                    </li>
-                                    <li class="catalog__item">
-                                        <div class="catalog__desc">
-                                            <a href="#" class="catalog__link">
-                                                <img src="/assets/img/catalog/gruzovik_perevozka_mashina.jpg"
-                                                    alt="catalog-pic" class="catalog__pic">
-                                                <span class="catalog__text">Грузоперевозки</span>
-                                            </a>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="new">
-                            <div class="new-title">
-                                <h2 class="new-title__start">
-                                    Новости
-                                </h2>
-                                <div class="new-title__block">
-                                    <a href="#" class="new-title__link">
-                                        читать все новости
-                                    </a>
-                                </div>
-                            </div>
-                            <ul class="new__list">
-                                <li class="new__item">
-                                    <a href="#" class="new__link">
-                                        <div class="new__wrapper-pic">
-                                            <img src="/assets/img/foto/foot.jpg" alt="news-pic" class="new__pic">
-                                        </div>
-                                        <div class="new-desc__block">
-                                            <div class="new-desc__title">
-                                                Благотворительный турнир по мини футболу среди дипломатического корпуса
-                                                аккредитованных в КР
-                                            </div>
-                                            <div class="new-desc__text">
-                                                29 сентября 2018 года состоялся благотворительный турнир по мини футболу
-                                                среди дипломатического корпуса аккредитованных в КР, и приуроченный к
-                                                празднованию Дня независимости Кыргызской Республики. В турнире приняли
-                                                участие нижеследующие команды
-                                            </div>
-                                            <div class="new-desc__bottom">
-                                                <div class="new-desc__data">
-
-                                                    <div class="new-desc__data-text">
-                                                        05.04.2019
-                                                    </div>
-                                                </div>
-                                                <span class="new-desc__bottom-span">
-                                                    читать
-                                                </span>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </li>
-                                <li class="new__item">
-                                    <a href="#" class="new__link">
-                                        <div class="new__wrapper-pic">
-                                            <img src="/assets/img/foto/news-pic.jpg" alt="nopic" class="new__pic">
-                                        </div>
-                                        <div class="new-desc__block">
-                                            <div class="new-desc__title">
-                                                МИД Кыргызской Республики в ДА МИД КР имени К.Дикамбаева проведен
-                                                конкурс выразительного чтения
-                                            </div>
-                                            <div class="new-desc__text">
-                                                В рамках празднования в 2018 году 90-летия со дня рождения великого
-                                                кыргызского писателя Чынгыза Торокуловича Айтматова, Министерством
-                                                иностранных дел Кыргызской Республики и загранучреждениями КР на
-                                                территории Кыргызстана и в зарубежных
-                                            </div>
-                                            <div class="new-desc__bottom">
-                                                <div class="new-desc__data">
-
-                                                    <div class="new-desc__data-text">
-                                                        07.04.2019
-                                                    </div>
-                                                </div>
-                                                <span class="new-desc__bottom-span">
-                                                    читать
-                                                </span>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="slaider-bottom">
-                            <div class="slaider-bottom__block">
-                                <a href="#" class="slaider-bottom__link">
-                                    <img src="/assets/img/banner/bottom-banner.jpg" alt="banner-bottom"
-                                        class="slaider-bottom__pic">
-                                </a>
-                            </div>
-                            <div class="slaider-bottom__block">
-                                <a href="#" class="slaider-bottom__link">
-                                    <img src="/assets/img/banner/8-е.jpg" alt="banner-bottom"
-                                        class="slaider-bottom__pic">
-                                </a>
-                            </div>
-                        </div>
+                        <div class="breadcrumbs">
+                              <div class="breadcrumbs__block">
+                                 <ul class="breadcrumbs__list">
+                                       <li class="breadcrumbs__item">
+                                             <a href="index.html" class="breadcrumbs__link">Главная</a>
+                                          </li>
+                                          <li class="breadcrumbs__item">
+                                             <a href="service.html" class="breadcrumbs__link">Услуги</a>
+                                          </li>
+                                          <li class="breadcrumbs__item">
+                                             <a href="service-item.html" class="breadcrumbs__link breadcrumbs__link--activ">Автотранспортные услуги</a>
+                                          </li>
+                                 </ul>                      
+                              </div>
+                        </div>                                        
                     </main>
                 </div>
 
