--- a/service.html
+++ b/service.html
@@ -367,7 +367,7 @@
                                 <ul class="catalog__list">
                                     <li class="catalog__item">
                                         <div class="catalog__desc">
-                                            <a href="#" class="catalog__link">
+                                            <a href="service-item.html" class="catalog__link">
                                                 <img src="/assets/img/catalog/avto.jpg" alt="catalog-pic"
                                                     class="catalog__pic">
                                                 <span class="catalog__text">Автотранспортные услуги</span>
